trying desperately to get Colab to run a version prior to 3.11 so tflite model maker can actually work

--- a/modelmaker/speech_recognition.ipynb
+++ b/modelmaker/speech_recognition.ipynb
@@ -6,7 +6,7 @@
         "id": "3XX46cTrh6iD"
       },
       "source": [
-        "##### Copyright 2022 The TensorFlow Authors."
+        "##### Copyright 2024 The AI Edge Authors."
       ]
     },
     {
@@ -70,7 +70,7 @@
       },
       "source": [
         "\n",
-        "In this colab notebook, you'll learn how to use the [TensorFlow Lite Model Maker](https://www.tensorflow.org/lite/models/modify/model_maker) to train a speech recognition model that can classify spoken words or short phrases using one-second sound samples. The Model Maker library uses transfer learning to retrain an existing TensorFlow model with a new dataset, which reduces the amount of sample data and time required for training. \n",
+        "In this colab notebook, you'll learn how to use the [TensorFlow Lite Model Maker](https://www.tensorflow.org/lite/models/modify/model_maker) to train a speech recognition model that can classify spoken words or short phrases using one-second sound samples. The Model Maker library uses transfer learning to retrain an existing TensorFlow model with a new dataset, which reduces the amount of sample data and time required for training.\n",
         "\n",
         "By default, this notebook retrains the model (BrowserFft, from the [TFJS Speech Command Recognizer](https://github.com/tensorflow/tfjs-models/tree/master/speech-commands#speech-command-recognizer)) using a subset of words from the [speech commands dataset](https://www.tensorflow.org/datasets/catalog/speech_commands) (such as \"up,\" \"down,\" \"left,\" and \"right\"). Then it exports a TFLite model that you can run on a mobile device or embedded system (such as a Raspberry Pi). It also exports the trained model as a TensorFlow SavedModel.\n",
         "\n",
@@ -91,6 +91,17 @@
       ]
     },
     {
+      "cell_type": "code",
+      "source": [
+        "!python --version"
+      ],
+      "metadata": {
+        "id": "r00BKg80mZE0"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
       "cell_type": "markdown",
       "metadata": {
         "id": "MelHQlE7FVue"
@@ -107,12 +118,13 @@
       },
       "outputs": [],
       "source": [
-        "# use command line to install the lib and tflite\n",
-        "# in mac, libportaudio2 should be installed iwth brew\n",
-        "# brew install libportaudio2\n",
+        "!sudo apt-get update -y\n",
+        "!sudo apt-get install python3.7\n",
+        "!sudo update-alternatives --install /usr/bin/python3 python3 /usr/bin/python3.7 1\n",
+        "!python --version\n",
         "\n",
-        "#!sudo apt -y install libportaudio2\n",
-        "#!pip install tflite-model-maker"
+        "!sudo apt -y install libportaudio2\n",
+        "!pip install tflite-model-maker"
       ]
     },
     {
@@ -163,7 +175,7 @@
         "\n",
         "But if you want to train with your own speech dataset, follow these steps:\n",
         "\n",
-        "**Note:** \n",
+        "**Note:**\n",
         "The model you'll retrain expects input data to be roughly one second of audio at 44.1 kHz. Model Maker perfoms automatic resampling for the training dataset, so there's no need to resample your dataset if it has a sample rate other than 44.1 kHz. But beware that audio samples longer than one second will be split into multiple one-second chunks, and the final chunk will be discarded if it's shorter than one second.\n",
         "\n",
         "1. Be sure each sample in your dataset is in **WAV file format, about one second long**. Then create a ZIP file with all your WAV files, organized into separate subfolders for each classification. For example, each sample for a speech command \"yes\" should be in a subfolder named \"yes\". Even if you have only one class, the samples must be saved in a subdirectory with the class name as the directory name. (This script assumes your dataset **is not split** into train/validation/test sets and performs that split for you.)\n",
@@ -178,7 +190,6 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "cellView": "form",
         "id": "AK9o98X7qyhU"
       },
       "outputs": [],
@@ -201,7 +212,7 @@
         "id": "gBVClNMwHtMD"
       },
       "source": [
-        "Whether you're using the default speech dataset or a custom dataset, you should have a good set of background noises so your model can distinguish speech from other noises (including silence). \n",
+        "Whether you're using the default speech dataset or a custom dataset, you should have a good set of background noises so your model can distinguish speech from other noises (including silence).\n",
         "\n",
         "Because the following background samples are provided in WAV files that are a minute long or longer, we need to split them up into smaller one-second samples so we can reserve some for our test dataset. We'll also combine a couple different sample sources to build a comprehensive set of background noises and silence:"
       ]
@@ -302,7 +313,7 @@
         "  test_dir = './dataset-test'\n",
         "\n",
         "  # Move the processed background samples\n",
-        "  shutil.move(background_dir, os.path.join(dataset_dir, 'background'))   \n",
+        "  shutil.move(background_dir, os.path.join(dataset_dir, 'background'))\n",
         "\n",
         "  # Delete all directories that are not in our commands list\n",
         "  dirs = glob.glob(os.path.join(dataset_dir, '*/'))\n",
@@ -523,7 +534,7 @@
         "id": "maTOoRvAwI9l"
       },
       "source": [
-        "## Load your dataset "
+        "## Load your dataset"
       ]
     },
     {
@@ -618,7 +629,7 @@
         "\n",
         "If you're using a custom dataset, you might want to change the batch size as appropriate for the number of samples in your train set.\n",
         "\n",
-        "**Note:** The first epoch takes longer because it must create the cache. "
+        "**Note:** The first epoch takes longer because it must create the cache."
       ]
     },
     {
@@ -898,11 +909,9 @@
   "metadata": {
     "accelerator": "GPU",
     "colab": {
-      "collapsed_sections": [],
       "name": "model_maker_speech_recognition.ipynb",
       "private_outputs": true,
-      "provenance": [],
-      "toc_visible": true
+      "provenance": []
     },
     "kernelspec": {
       "display_name": "Python 3",
